feat: add comment endpoint
